# zepto-stock-checker

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  dev.sh  docker-compose.yml
backend/: pyproject.toml
backend/app/: config.py  grid.py  links.py  main.py  ratelimit.py  search.py  store_cache.py  zepto.py
backend/scripts/: compare_stock.py  smoke_zepto.py
backend/tests/: test_api_access.py  test_grid.py  test_links.py  test_ratelimit.py  test_search.py  test_store_cache.py  test_zepto.py
docs/: RUNNING.md  zepto-api-notes.md
docs/superpowers/specs/: 2026-06-12-zepto-finder-design.md
frontend/: components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: location-search.tsx  results-list.tsx  results-map.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/src/components/ui/: drawer.tsx  slider.tsx
frontend/src/hooks/: use-search.ts
frontend/src/lib/: api.ts
